# needicons

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.test.tsx  app.tsx  index.css
frontend/src/hooks/: use-edition.ts
frontend/src/lib/: api-client.test.ts  api-client.ts  recreate-pool.ts  types.ts
frontend/src/pages/: generate.tsx  home.tsx  pack-detail.tsx  packs.test.tsx  packs.tsx  project.tsx  settings.tsx
frontend/src/test/: setup.ts
needicons/: __init__.py  __main__.py  cli.py
needicons/core/: models.py  prompt_enhance.py
needicons/core/export/: packager.py
needicons/core/pipeline/: __init__.py  background.py  base.py  color.py  denoise.py  detection.py  edges.py  fill.py  lasso.py  mask.py  normalize.py  resize.py  runner.py  shadow.py  signature.py  stroke.py  upscale.py
needicons/core/processing/: __init__.py  runpod.py
needicons/core/providers/: base.py  openai.py  openrouter.py  stability.py
needicons/server/: app.py  crypto.py  db.py  deps.py
needicons/server/api/: __init__.py  candidates.py  generate.py  generate_v2.py  jobs.py  packs.py  pipeline.py  profiles.py  projects.py  settings.py
needicons/server/auth/: base.py  local.py
needicons/server/queue/: base.py  local.py
scripts/: release.sh
tests/: conftest.py  test_integration.py
tests/core/: test_models.py  test_prompt_enhance.py
tests/server/: test_app.py  test_crypto.py
(+121 files in other folders)
